# busbar-sf-api

./: .gitignore  .pre-commit-config.yaml  BULK_QUERY_SECURITY.md  CHANGELOG.md  CI_FIX_SUMMARY.md  CODE_REVIEW.md  CONTRIBUTING.md  COVERAGE_AND_TEST_FIX.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  INTEGRATION_TESTING.md  JOB_SUMMARY_FORMAT.md  LICENSE-APACHE  LICENSE-MIT  README.md  REVIEW_SUMMARY.md  SECURITY.md  TEST_ARCHITECTURE.md  codecov.yml  sfdx-project.json  test-summary-format.sh  test_layout_compile  verify-build.sh
.devcontainer/: Dockerfile  README.md  devcontainer.json
.github/: copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: api-endpoint.yml  bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  integration-tests.yml  release.yml
config/: project-scratch-def.json
crates/sf-auth/: Cargo.toml  README.md
crates/sf-auth/src/: credentials.rs  error.rs  jwt.rs  lib.rs  oauth.rs  storage.rs
crates/sf-bridge/: Cargo.toml  Cargo.toml.orig  README.md
crates/sf-bridge/src/: busbar_auth.rs  capability.rs  error.rs  host_functions.rs  keychain_auth.rs  lib.rs
crates/sf-bridge/src/host_functions/: binary.rs  bulk.rs  collections.rs  composite.rs  consent.rs  embedded_service.rs  error.rs  knowledge.rs  layouts.rs  list_views.rs  metadata.rs  mod.rs  process.rs  quick_actions.rs  rest.rs  scheduler.rs  search.rs  standalone.rs  tooling.rs  user_password.rs
crates/sf-bridge/src/registration/: binary.rs  bulk.rs  collections.rs  composite.rs  consent.rs  embedded_service.rs  knowledge.rs  layouts.rs  list_views.rs  metadata.rs  mod.rs  process.rs  quick_actions.rs  rest.rs  scheduler.rs  search.rs  standalone.rs  tooling.rs  user_password.rs
crates/sf-bridge/tests/: integration.rs  support.rs
crates/sf-bulk/: Cargo.toml  README.md
crates/sf-bulk/src/: client.rs  error.rs  lib.rs  types.rs
crates/sf-client/: Cargo.toml  README.md
crates/sf-client/src/: client.rs  config.rs  error.rs  lib.rs  request.rs  response.rs  retry.rs  salesforce_client.rs  security.rs  types.rs
crates/sf-client/tests/: README.md  test_wasm_integration.rs
crates/sf-client/tests/wasm-plugin/: Cargo.toml
crates/sf-client/tests/wasm-plugin/src/: lib.rs
crates/sf-guest-sdk/: Cargo.toml  README.md
crates/sf-guest-sdk/src/: lib.rs
crates/sf-metadata/: Cargo.toml  README.md
crates/sf-metadata/src/: client.rs  deploy.rs  describe.rs  error.rs  lib.rs  list.rs  redact.rs  retrieve.rs  typed.rs  types.rs
crates/sf-metadata/src/client/: crud_sync.rs  deploy.rs  describe.rs  list.rs  mod.rs  retrieve.rs  xml_helpers.rs
crates/sf-rest/: Cargo.toml  README.md
crates/sf-rest/src/: actions.rs  client.rs  collections.rs  composite.rs  consent.rs  data_cloud.rs  describe.rs  embedded_service.rs  error.rs  invocable_actions.rs  knowledge.rs  layout.rs  lib.rs  list_views.rs  process.rs  query.rs  query_builder.rs  quick_actions.rs  scheduler.rs  search.rs  sobject.rs  types.rs  user_password.rs
crates/sf-rest/src/client/: binary.rs  collections.rs  composite.rs  consent.rs  crud.rs  data_cloud.rs  describe.rs  embedded_service.rs  invocable_actions.rs  knowledge.rs  layout.rs  limits.rs  list_views.rs  mod.rs  process.rs  query.rs  quick_actions.rs  scheduler.rs  search.rs  standalone.rs  sync.rs  user_password.rs
crates/sf-tooling/: Cargo.toml  README.md
crates/sf-tooling/src/: client.rs  error.rs  lib.rs  types.rs
crates/sf-tooling/src/client/: apex.rs  code_intelligence.rs  collections.rs  composite.rs  coverage.rs  dependencies.rs  describe.rs  execute.rs  logs.rs  mod.rs  query.rs  sobject.rs  test_execution.rs  trace_flags.rs
crates/sf-wasm-types/: Cargo.toml
crates/sf-wasm-types/src/: lib.rs
examples/: basic_auth.rs  bulk_operations.rs  dependencies.rs  error_handling.rs  oauth_revoke.rs  queries.rs  rest_crud.rs  test_sf_auth_url.rs
examples/wasm-guest-plugin/: Cargo.toml
examples/wasm-guest-plugin/src/: lib.rs
src/: lib.rs
tests/: integration.rs  integration_examples.rs  integration_sf_auth_url.rs  integration_test.rs
tests/integration/: auth.rs  bridge.rs  bulk.rs  common.rs  data_cloud.rs  domain_endpoints.rs  examples.rs  metadata.rs  metadata_typed.rs  mod.rs  rest.rs  scratch.rs  tooling.rs
tests/wasm-test-plugin/: Cargo.toml  README.md  build.sh
tests/wasm-test-plugin/src/: lib.rs
