[workspace]
resolver = "2"
members = [
    "crates/sf-client",
    "crates/sf-auth",
    "crates/sf-rest",
    "crates/sf-bulk",
    "crates/sf-metadata",
    "crates/sf-tooling",
]

# Root package for integration tests
[package]
name = "busbar-sf-api"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Salesforce API client library for Rust"

[dependencies]
busbar-sf-client.workspace = true
busbar-sf-auth.workspace = true
busbar-sf-rest.workspace = true
busbar-sf-bulk.workspace = true
busbar-sf-metadata.workspace = true
busbar-sf-tooling.workspace = true
tokio.workspace = true
chrono.workspace = true
serde_json.workspace = true

[[test]]
name = "integration_test"
path = "tests/integration_test.rs"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/busbar-io/busbar-sf-api"
rust-version = "1.75"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }
futures = "0.3"

# HTTP
reqwest = { version = "0.12", default-features = false, features = ["json", "gzip", "deflate", "rustls-tls"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"

# XML (for SOAP/Metadata API)
quick-xml = "0.36"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging/Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
url = "2.5"
urlencoding = "2.1"
base64 = "0.22"
uuid = { version = "1.10", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
bytes = "1.7"
tempfile = "3.12"
zip = "2.2"
dirs = "5.0"

# Crypto (for JWT)
jsonwebtoken = "9.3"
sha2 = "0.10"

# Testing
wiremock = "0.6"
mockito = "1.5"
tokio-test = "0.4"

# Internal crates (busbar-sf-* naming, directory names stay as sf-*)
busbar-sf-client = { path = "crates/sf-client" }
busbar-sf-auth = { path = "crates/sf-auth" }
busbar-sf-rest = { path = "crates/sf-rest" }
busbar-sf-bulk = { path = "crates/sf-bulk" }
busbar-sf-metadata = { path = "crates/sf-metadata" }
busbar-sf-tooling = { path = "crates/sf-tooling" }

[profile.release]
lto = true
codegen-units = 1
