[workspace]
resolver = "2"
members = [
    "crates/sf-client",
    "crates/sf-auth",
    "crates/sf-rest",
    "crates/sf-bulk",
    "crates/sf-metadata",
    "crates/sf-tooling",
]

# Root package for integration tests
[package]
name = "busbar-sf-api"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Salesforce API client library for Rust"
readme = "README.md"
autotests = false

[features]
# Preserve current behavior: depending on busbar-sf-api includes all API surfaces.
default = ["full"]

full = ["auth", "rest", "bulk", "metadata", "tooling"]

client = ["dep:busbar-sf-client"]
auth = ["client", "dep:busbar-sf-auth"]
rest = ["auth", "dep:busbar-sf-rest"]
bulk = ["auth", "dep:busbar-sf-bulk"]
metadata = ["auth", "dep:busbar-sf-metadata"]
tooling = ["auth", "dep:busbar-sf-tooling"]

# Optional feature for MetadataComponentDependency support in tooling and bulk APIs
dependencies = [
    "busbar-sf-client/dependencies",
    "busbar-sf-tooling/dependencies",
    "busbar-sf-bulk/dependencies"
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
busbar-sf-client = { workspace = true, optional = true }
busbar-sf-auth = { workspace = true, optional = true }
busbar-sf-rest = { workspace = true, optional = true }
busbar-sf-bulk = { workspace = true, optional = true }
busbar-sf-metadata = { workspace = true, optional = true }
busbar-sf-tooling = { workspace = true, optional = true }
tokio.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing-subscriber.workspace = true
zip.workspace = true

[dev-dependencies]
base64.workspace = true

[[bin]]
name = "setup-scratch-org"
path = "src/bin/setup_scratch_org.rs"

[[test]]
name = "integration"
path = "tests/integration.rs"

[workspace.package]
version = "0.0.3"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/composable-delivery/busbar-sf-api"
rust-version = "1.88"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }
futures = "0.3"

# HTTP
reqwest = { version = "0.13", default-features = false, features = [
    "json",
    "gzip",
    "deflate",
    "rustls",
] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
csv = "1.3"

# XML (for SOAP/Metadata API)
quick-xml = "0.36"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging/Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
url = "2.5"
urlencoding = "2.1"
base64 = "0.22"
uuid = { version = "1.10", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
bytes = "1.7"
tempfile = "3.12"
zip = "7.2"
dirs = "6.0"

# Crypto (for JWT)
jsonwebtoken = "9.3"
sha2 = "0.10"

# Testing
wiremock = "0.6"
mockito = "1.5"
tokio-test = "0.4"

# Internal crates (busbar-sf-* naming, directory names stay as sf-*)
busbar-sf-client = { version = "0.0.3", path = "crates/sf-client" }
busbar-sf-auth = { version = "0.0.3", path = "crates/sf-auth" }
busbar-sf-rest = { version = "0.0.3", path = "crates/sf-rest" }
busbar-sf-bulk = { version = "0.0.3", path = "crates/sf-bulk" }
busbar-sf-metadata = { version = "0.0.3", path = "crates/sf-metadata" }
busbar-sf-tooling = { version = "0.0.3", path = "crates/sf-tooling" }

[profile.release]
lto = true
codegen-units = 1
