[package]
name = "busbar-sf-bridge"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Extism host bridge for sandboxed WASM access to Salesforce APIs"

[features]
default = ["full"]
full = ["rest", "bulk", "tooling", "metadata"]
rest = ["dep:busbar-sf-rest", "dep:busbar-sf-client"]
bulk = ["rest", "dep:busbar-sf-bulk"]
tooling = ["rest", "dep:busbar-sf-tooling"]
metadata = ["rest", "dep:busbar-sf-metadata"]
busbar = ["dep:busbar-capability"]

[dependencies]
# Internal crates
busbar-sf-wasm-types = { workspace = true }
busbar-sf-rest = { workspace = true, optional = true }
busbar-sf-client = { workspace = true, optional = true }
busbar-sf-bulk = { workspace = true, optional = true }
busbar-sf-tooling = { workspace = true, optional = true }
busbar-sf-metadata = { workspace = true, optional = true }

# Extism host SDK
extism = "1"

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
rmp-serde = { workspace = true }

# Encoding
base64 = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Busbar capability system (optional)
busbar-capability = { git = "https://github.com/composable-delivery/busbar", optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
wiremock = { workspace = true }
