[package]
name = "busbar-sf-bulk"
description = "Salesforce Bulk API 2.0 client for large-scale data operations"
readme = "README.md"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
busbar-sf-client.workspace = true
busbar-sf-auth.workspace = true
busbar-sf-rest = { workspace = true, optional = true }
reqwest.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
csv.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true
bytes.workspace = true
urlencoding.workspace = true

[features]
default = ["query-builder"]
query-builder = ["busbar-sf-rest"]
dependencies = ["busbar-sf-client/dependencies"]

[dev-dependencies]
wiremock.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
