[package]
name = "busbar-sf-guest-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Guest SDK for building WASM plugins that interact with Salesforce via the bridge"

[dependencies]
busbar-sf-wasm-types = { workspace = true }
extism-pdk = "1"
serde = { workspace = true }
serde_json = { workspace = true }
rmp-serde = { workspace = true }
