[package]
name = "busbar-sf-guest-sdk"
version = "0.0.3"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/composable-delivery/busbar-sf-api"
rust-version = "1.88"
description = "Guest SDK for building WASM plugins that interact with Salesforce via the bridge"

# Exclude from workspace - compiles to wasm32-unknown-unknown only
[workspace]

[dependencies]
busbar-sf-wasm-types = { version = "0.0.3", path = "../sf-wasm-types" }
extism-pdk = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1"
