[package]
name = "busbar-sf-metadata"
description = "Salesforce Metadata API client for deploying and retrieving metadata"
readme = "README.md"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []
typed = ["dep:busbar-sf-types", "dep:zip"]

[dependencies]
busbar-sf-client.workspace = true
busbar-sf-auth.workspace = true
reqwest.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
base64.workspace = true
busbar-sf-types = { version = "0.0.1", optional = true }
zip = { workspace = true, optional = true }

[dev-dependencies]
wiremock.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
