[package]
name = "sf-client-wasm-test-plugin"
version = "0.1.0"
edition = "2021"

[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
busbar-sf-client = { path = "../..", default-features = false, features = ["wasm"] }
extism-pdk = "1.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "z"
lto = true
strip = true
